# PythonHomeWorks

./: .gitignore  README.md  main.py  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  README.md  app.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_04/migrations/: env.py
homework_04/migrations/versions/: 48ded6044ea2_create_tables.py
homework_05/: app.py
homework_05/templates/: about.html  index.html  layout.html
homework_05/views/: index.py
homework_06/: docker-compose.yaml
homework_06/app/: app.py  config.py
homework_06/app/templates/: base.html
homework_06/docker-build/: Dockerfile
homework_07/: README.md
homework_07/education/education/: settings.py  urls.py
homework_07/education/mysite/: urls.py  views.py
homework_07/education/mysite/migrations/: 0002_alter_teacher_avatar.py
homework_07/education/mysite/templates/mysite/: about-us.html  course-details.html  index.html  layout.html
homework_07/education/static/mysite/css/: style.css
homework_08/education/mysite/: admin.py  models.py  urls.py  views.py
homework_08/education/mysite/migrations/: 0001_initial.py  0003_course_is_popular.py
homework_08/education/mysite/templates/mysite/: _courses.html  _footer.html  _header.html  contact.html  courses.html
homework_08/education/static/mysite/js/: theme.js
